--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,7 +15,7 @@ stages:
       displayName: Instalando Node
       inputs:
         versionSource: 'spec'
-        versionSpec:
+        versionSpec: '6.x'
         checkLatest: true
 
     - script: npm install
