Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,7 +18,7 @@ stages:
         versionSpec: '6.x'
         checkLatest: true
 
-    - script: npm install
+    - script: dir
       displayName: Instalando pacotes
       
 
