--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,7 +3,7 @@ name: 'PIPELINE REACT (VERCEL)'
 trigger: none
 
 pool:
-  vmImage: 'windows-latest'
+  vmImage: 'ubuntu-latest'
 
 stages:
 - stage: build
@@ -14,9 +14,7 @@ stages:
     - task: NodeTool@0
       displayName: Instalando Node
       inputs:
-        versionSource: 'spec'
-        versionSpec: '6.x'
-        checkLatest: true
+        versionSpec: '16.x'
 
     - script: npm install
       displayName: Instalando pacotes
